--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWYQkc9Awrwvm3B0EEW3Uy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QTJmAF0Ndiq-",
-        "outputId": "e78b24db-c82b-4472-b395-ab051ecf737c"
+        "outputId": "bf946d6a-d836-41da-e48e-5c0c054ee807"
       },
       "outputs": [
         {
@@ -68,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bg5BVRNIeYdt",
-        "outputId": "2469ce55-d005-4742-a9ad-ebbc56686f95"
+        "outputId": "8782ab5e-ee7a-43f6-d692-84118c70cef9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,27 +110,22 @@
         "        current_som = 0\n",
         "        poi =  i + 1\n",
         "\n",
-        "print(\"O valor máximo da soma é \"+ max_so_far)"
+        "print(\"O valor máximo da soma é \"+ str(max_so_far))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
+          "base_uri": "https://localhost:8080/"
         },
         "id": "y9Ub95lKgDW-",
-        "outputId": "fb9bbb02-0f37-419e-a72e-3fc08d2d235c"
+        "outputId": "e98591c5-254b-48e4-efb6-cd56c6c714b7"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-365e26fc5778>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mpoi\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"O valor máximo da soma é \"\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mmax_so_far\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O valor máximo da soma é -2\n"
           ]
         }
       ]
